src/main/java/com/example/shoppingcart/error/CategoryNotFoundException.java
package com.example.shoppingcart.error;

public class CategoryNotFoundException extends RuntimeException {
}
